--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,63 @@ body{
     font-weight: normal;
     text-align: center;
 }
+.header{
+    background-color: transparent;
+    max-width: 560px;
+    margin: 0px auto;
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+}
+.header .logo{
+    font-size:24px;
+    font-weight: bold;
+    color:rgb(53, 131, 131);
+    width:30%;
+    float:left;
+    text-align: left;
+}
+.header .logo span{
+    font-size: 12px;
+    width:100%;
+    display: block;
+    float:left;
+    font-weight: normal;
+}
+.header .menu{
+    width: 70%;
+    float: right;
+}
+.header .menu ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: flex-end;
+    align-items: center;
+}
+.header .menu ul li{
+    list-style: none;
+    float:right;
+    margin-left:10px;
+}
+.header .menu ul li a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color:rgb(53, 131, 131);
+    transition:all 0.2s ease;
+}
+.header .menu ul li a:hover{
+    color:#222;
+}
 .content{
     padding:30px;
-    margin:50px auto 0;
+    margin:15px auto 0;
     border:1px solid rgb(25, 97, 212);
     border-radius: 15px;
     width: 500px;
