--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ body{
 }
 .header{
     background-color: transparent;
-    max-width: 560px;
+    max-width: 100%;
+    padding: 15px 30px;
     margin: 0px auto;
     border-bottom: 1px solid #ddd;
     display: flex;
@@ -46,7 +47,7 @@ body{
 .header .menu ul li{
     list-style: none;
     float:right;
-    margin-left:10px;
+    margin-left:15px;
 }
 .header .menu ul li a{
     text-decoration: none;
