--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     font-weight: normal;
-    text-align: center;
 }
 .header{
     background-color: transparent;
@@ -62,7 +61,7 @@ body{
 .content{
     padding:30px;
     margin:15px auto 0;
-    border:1px solid rgb(25, 97, 212);
+    border:1px solid #eee;
     border-radius: 15px;
     width: 500px;
 }
