--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    font-weight: normal;
+    font-weight: 400;
 }
 .header{
     background-color: transparent;
