--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
+html {
+    position: relative;
+    min-height: 100%;
+    padding-bottom:80px;
+  }
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     font-weight: 400;
+    margin-bottom: 30px;
 }
 .content{
     padding:30px;
@@ -64,4 +70,13 @@ body{
 }
 .header .menu ul li a:hover{
     color:#222;
+}
+footer{
+    text-align: center;
+    background-color:#f8f8f8;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    height: 80px;
+    line-height:80px;
 }
