--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ body{
     margin:15px auto 0;
     border:1px solid #eee;
     border-radius: 15px;
-    width: 500px;
+    max-width: 500px;
+    width:100%;
 }
 .header{
     background-color: transparent;
@@ -24,7 +25,7 @@ body{
     border-bottom: 1px solid #ddd;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-content: center;
     justify-content: space-between;
     align-items: center;
@@ -43,6 +44,10 @@ body{
     display: block;
     float:left;
     font-weight: normal;
+}
+.header img.logo-img{
+    height:60px;
+    float:left;
 }
 .header .menu{
     width: 70%;
@@ -79,4 +84,34 @@ footer{
     bottom: 0;
     height: 80px;
     line-height:80px;
+}
+
+@media(max-width:767px){
+    .header{
+        padding: 15px 15px;
+        flex-direction: column;
+        border:none;
+    }
+    .header .logo {
+        font-size: 18px;
+        width: 100%;
+        text-align: center;
+        margin: 0 0 30px;
+    }
+    .header .menu{
+        width:100%;
+    }
+    .header .menu ul {
+        padding: 0;
+        display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    }
+    .content {
+        margin: 15px 5% 0;
+        width: 90%;
+    }
 }
